--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,3 +1,8 @@
+disabled_rules:
+  - line_length
+
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
   - Pods
+  - SwiftLintPlaygroundTests
+  - SwiftLintPlaygroundUITests
