--- a/.github/workflows/swiftlint.yml
+++ b/.github/workflows/swiftlint.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v1
         
+      - name: GitHub Action
+        uses: wearerequired/lint-action@v1
+        
       - name: Checking (Only files changed in the PR)
         uses: wearerequired/lint-action@v1
         env:
